@startuml

class User {
  id: ULID
  name: String
  email: String
  born: LocalDate
  password: String
}

class Entry {
  id: ULID
}

class Note {
  title: String
  body: String
  due: LocalDateTime
  priority: Int
  status: TaskStatus
}
Entry <|-- Note

class Comment {
  body: String
}

User *-- Comment
User *-- Entry
Entry *-- Comment

@enduml
